--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,1 @@
-/var/*
-!/var/cache
-/var/cache/*
-!var/cache/.gitkeep
-!/var/logs
-/var/logs/*
-!var/logs/.gitkeep
-!/var/sessions
-/var/sessions/*
-!var/sessions/.gitkeep
-!var/SymfonyRequirements.php
-/vendor/
-
-.idea/*
-
-/nbproject/*
-
-
-!.gitignore
-!.gitkeep
+example.php
